sign in ridiculous, but almost functional

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>Kylo Renstagram</title>
+    <link rel=”shortcuticon” href=”%PUBLIC_URL%/kylo_favicon.ico”>
   </head>
   <body>
     <div id="root"></div>
